# aussie-finances

./: Cargo.toml  README.md  TECH_DEBT.md  Trunk.toml  index.html
.claude/: settings.local.json
.github/workflows/: build.yml
src/: app.rs  backup.rs  formatting.rs  loaders.rs  main.rs  storage.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: amortization_table.rs  calculator_form.rs  collapsible.rs  field_group.rs  income_charts.rs  info_tip.rs  line_chart.rs  mod.rs  mortgage_editor.rs  mortgage_results.rs  mortgage_summary.rs  results_table.rs  split_editor.rs
src/domain/: budget.rs  calculator.rs  mod.rs  mortgages.rs  spreadsheet.rs  tax_rules.rs  types.rs  validation.rs
src/pages/: budget.rs  debt_recycling.rs  income.rs  mod.rs  mortgages.rs  spreadsheet.rs  tax.rs
static/: manifest.webmanifest  sw.js
