[workspace]
members = ["src-tauri"]

[package]
name = "aus-fin"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Storage", "Element", "DomRect", "Blob", "BlobPropertyBag", "Url", "HtmlAnchorElement", "Document", "HtmlElement"] }

[dev-dependencies]
approx = "0.5"
